--- a/estoque.html
+++ b/estoque.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="Estoque - Grupo Ox">
     <meta property="og:description" content="Acesse o sistema de gestão de estoque do Grupo OX. Consulte o inventário, registre entradas e saídas de produtos e mantenha o controle total de suas operações.">
-    <meta property="og:image" content="https://souox.50x.com.br/img/planilha-estoque.png">
+    <meta property="og:image" content="https://i1.wp.com/cdn.jsdelivr.net/gh/geanramos/souox/img/planilha-estoque.png?resize=700,393">
     <meta property="og:url" content="https://souox.50x.com.br/estoque.html">
     <meta property="og:site_name" content="Grupo OX">
     <meta property="og:type" content="website">
@@ -21,10 +21,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Estoque - Grupo Ox">
     <meta name="twitter:description" content="Acesse o sistema de gestão de estoque do Grupo OX. Consulte o inventário, registre entradas e saídas de produtos e mantenha o controle total de suas operações.">
-    <meta name="twitter:image" content="https://souox.50x.com.br/img/planilha-estoque.png">
+    <meta name="twitter:image" content="https://i1.wp.com/cdn.jsdelivr.net/gh/geanramos/souox/img/planilha-estoque.png?resize=700,393">
     <meta name="twitter:site" content="@geanramos">
     <meta name="twitter:creator" content="@geanramos">
-    <meta http-equiv="refresh" content="1; url=https://docs.google.com/spreadsheets/d/11CUTszyNTnnCQqTeqVtaWSt5HKH-DTMm/edit?usp=sharing&ouid=101182822215527701552&rtpof=true&sd=true">
+    <meta http-equiv="refresh" content="30; url=https://docs.google.com/spreadsheets/d/11CUTszyNTnnCQqTeqVtaWSt5HKH-DTMm/edit?usp=sharing&ouid=101182822215527701552&rtpof=true&sd=true">
 
 </head>
 <body>
