--- a/estoque.html
+++ b/estoque.html
@@ -54,7 +54,7 @@ Twitter: @GeanRamos
   </head>
   <body>
     <div class="container">
-      <img src="./img/logo-redrect.png" class="logo" />
+      <img src="./img/logo-redirect.png" class="logo" />
       <div class="box">
         <h1>Redirecionando para Estoque...</h1>
         <div id="timer"></div>
