--- a/estoque.html
+++ b/estoque.html
@@ -50,11 +50,11 @@ Twitter: @GeanRamos
             update_timer();
         });
     </script>
-    <link rel="stylesheet" href="./css/style-redirect.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="./css/style-redirect.css?v=02" type="text/css" media="all" />
   </head>
   <body>
     <div class="container">
-      <img src="./img/logo-redirect.png" class="logo" />
+      <img src="https://i1.wp.com/cdn.jsdelivr.net/gh/geanramos/souox/img/souox-white.png?resize=100,37.38" class="logo" />
       <div class="box">
         <h1>Redirecionando para Estoque...</h1>
         <div id="timer"></div>
