--- a/estoque.html
+++ b/estoque.html
@@ -13,6 +13,7 @@ Twitter: @GeanRamos
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1, shrink-to-fit=no" />
     <title>Estoque - Grupo Ox</title>
+    <link rel="icon" href="https://ssl.gstatic.com/docs/spreadsheets/favicon3.ico"/>
 
     <meta name="description" content="Acesse o sistema de gestão de estoque do Grupo OX. Consulte o inventário, registre entradas e saídas de produtos e mantenha o controle total de suas operações.">
     <meta name="keywords" content="estoque, grupo ox, controle de estoque, inventário, produtos">
