--- a/contra-cheque/contracheques/colaborador-52120.html
+++ b/contra-cheque/contracheques/colaborador-52120.html
@@ -13,7 +13,8 @@
     <header class="main-header">
         <div class="container">
             <img src="https://i1.wp.com/cdn.jsdelivr.net/gh/geanramos/souox/img/souox-white.png?resize=150,56" alt="Logo Grupo OX" class="logo">
-            <a href="index.html" class="logout-btn">Sair</a>
+            <a href="#sair" class="logout-btn" onclick="event.preventDefault(); window.location.href='https://www.souox.com';">Sair</a>
+            
         </div>
     </header>
 
@@ -29,17 +30,17 @@
                 
                 <div class="item">
                     <span class="mes-ano">Agosto / 2025</span>
-                    <a href="/caminho/para/o/contracheque_ago_2025.pdf" class="btn-download" download>Baixar PDF</a>
+                    <a href="contracheque.pdf#ago_2025.pdf" class="btn-download" download>Baixar PDF</a>
                 </div>
 
                 <div class="item">
                     <span class="mes-ano">Julho / 2025</span>
-                    <a href="/caminho/para/o/contracheque_jul_2025.pdf" class="btn-download" download>Baixar PDF</a>
+                    <a href="contracheque.pdf#jul_2025.pdf" class="btn-download" download>Baixar PDF</a>
                 </div>
 
                 <div class="item">
                     <span class="mes-ano">Junho / 2025</span>
-                    <a href="/caminho/para/o/contracheque_jun_2025.pdf" class="btn-download" download>Baixar PDF</a>
+                    <a href="contracheque.pdf#jun_2025.pdf" class="btn-download" download>Baixar PDF</a>
                 </div>
 
                 </div>
