--- a/contra-cheque/contracheques/colaborador-52120.html
+++ b/contra-cheque/contracheques/colaborador-52120.html
@@ -13,7 +13,7 @@
     <header class="main-header">
         <div class="container">
             <img src="https://i1.wp.com/cdn.jsdelivr.net/gh/geanramos/souox/img/souox-white.png?resize=150,56" alt="Logo Grupo OX" class="logo">
-            <a href="#sair" class="logout-btn" onclick="event.preventDefault(); window.location.href='https://www.souox.com';">Sair</a>
+            <a href="https://sou.ox#sair" class="logout-btn" onclick="event.preventDefault(); window.location.href='https://www.souox.com';">Sair</a>
             
         </div>
     </header>
