--- a/img/email1.html
+++ b/img/email1.html
@@ -134,6 +134,7 @@
       Esperamos que compreendam a situação e que possamos aproveitar esta condição especial para continuar fortalecendo nossa parceria.<br><br>
       Fico à inteira disposição para qualquer esclarecimento.
     </p>
+	<center><a href="#botao" class="btn" style="display: inline-block;padding: 8px 25px;color: white;font-size: 14px;text-decoration: none;border-radius: 4px;text-align: center;cursor: pointer;display: inline-block;font-weight: 400;font-family: 'Roboto', Tahoma, Verdana, Segoe, sans-serif;background-color: #15e;">Sou um Botão</a></center>
     <p style="margin: 0; margin-bottom: 16px;">Atenciosamente,</p>
     <p style="margin: 0;">
       <strong>Leticia Leal</strong><br>
