--- a/img/email2.html
+++ b/img/email2.html
@@ -213,8 +213,8 @@
 														<tr>
 															<td class="pad">
 																<div style="color:#000c1f;direction:ltr;font-family:'Roboto', Tahoma, Verdana, Segoe, sans-serif;font-size:11px;font-weight:400;letter-spacing:0px;line-height:1.2;text-align:left;mso-line-height-alt:13px;">
-																	<p style="margin: 0; margin-bottom: 16px;"><br>Rua dois, n°69, Titanlandia<br>Castanhal - PA CEP: 68741-492<br>
-																	(91) 3712-0031 / (91) 99180-8585<br>Email: sac@souox.com</p>
+																	<p style="margin: 0; margin-bottom: 16px;"><br><strong>Leticia Leal</strong><br>Vendas | Grupo OX<br>
+																	E-mail: oxvendas-01@souox.com<br>WhatsApp: (91) 9 9180-8585</p>
 																</div>
 															</td>
 														</tr>
