--- a/img/comunicado.html
+++ b/img/comunicado.html
@@ -48,7 +48,7 @@ O aumento expressivo no preço da ureia agrícola no Brasil <br>— superior a 2
 
 <ul style="margin-top: 0; margin-bottom: 14px;">
   <li><strong><a href="https://www.google.com/search?q=restri%C3%A7%C3%A3o+das+exporta%C3%A7%C3%B5es+de+ureia+automotiva+pela+china+ao+Brazil">Restrição das exportações pela China</a></strong>, maior produtora mundial de ureia.</li>
-  <li><strong><a href="#https://www.google.com/search?q=Conflitos+geopol%C3%ADticos+no+Oriente+M%C3%A9dio+e+Norte+da+%C3%81frica+afeta+pre%C3%A7o+da+ureia+automotiva+no+Brasil">Conflitos geopolíticos</a></strong> no Oriente Médio e Norte da África, que paralisaram fábricas no Irã e Egito.</li>
+  <li><strong><a href="https://www.google.com/search?q=Conflitos+geopol%C3%ADticos+no+Oriente+M%C3%A9dio+e+Norte+da+%C3%81frica+afeta+pre%C3%A7o+da+ureia+automotiva+no+Brasil">Conflitos geopolíticos</a></strong> no Oriente Médio e Norte da África, que paralisaram fábricas no Irã e Egito.</li>
   <li><strong>Alta demanda internacional</strong>, especialmente da Índia, que antecipou compras e reduziu a oferta global.</li>
   <li><strong><a href="https://www.youtube.com/results?search_query=Press%C3%A3o+da+safra+2025%2F26+eleva+pre%C3%A7o+da+ureia+automotiva">Pressão da safra 2025/26</a></strong>, que elevou a procura interna por fertilizantes.</li>
 </ul>
