--- a/img/erlandio.html
+++ b/img/erlandio.html
@@ -51,7 +51,7 @@ Conforme solicitado, segue abaixo o orçamento referente ao produto Arla OX 32, 
 <b>Cidade:</b> Macapá – AP<br>
 <b>CEP:</b> 68908-785<br>
 <b>Contato:</b> Edly<br>
-<b>Vendedor:</b> <a href="https://souox.com/erlandio" style="color: #000c1f; text-decoration: underline;">Francisco Erlandio</a><br>
+<b>Vendedor:</b> <a href="https://souox.com/erlandio" style="color: #000c1f; text-decoration: underline;">Erlandio Reis</a><br>
 <b>Telefone:</b> (96) 8143-2294<br>
 <b>E-mails:</b> consultor.ap@covezi.com.br, edly.cruz@covezi.com.br, estoque.ap@covezi.com.br<br><br>
 
@@ -63,7 +63,6 @@ Conforme solicitado, segue abaixo o orçamento referente ao produto Arla OX 32, 
   <li><b>Descrição:</b> ARLA BB 20 LT</li>
   <li><b>Quantidade:</b> 50 unidades</li>
   <li><b>Valor unitário:</b> R$ 75,00</li>
-  <li><b>Subtotal:</b> R$ 3.750,00</li>
   <li><b>Total do Pedido:</b> R$ 3.750,00</li>
 </ul>
 
@@ -82,7 +81,7 @@ Atenciosamente,<br><br>
 
 
 
-																	<p style="margin: 0;"><strong>Francisca Erlandio</strong><br>Vendas | Grupo OX<br>E-mail: oxvendas-02@souox.com<br>Whatsapp: +55 91 9151-2686</p>
+																	<p style="margin: 0;"><strong>Erlandio Reis</strong><br>Vendas | Grupo OX<br>E-mail: oxvendas-02@souox.com<br>Whatsapp: +55 91 9151-2686</p>
 																</div>
 															</td>
 														</tr>
@@ -104,7 +103,7 @@ Atenciosamente,<br><br>
 																		<tr>
 																			<td style="padding:0 2px 0 2px;"><a href="https://souox.com/fb" target="_blank"><img src="https://cdn.jsdelivr.net/gh/geanramos/18011975/img/facebook.png" width="32" height="auto" alt="Facebook" title="facebook" style="display: block; height: auto; border: 0;"></a></td>
 																			<td style="padding:0 2px 0 2px;"><a href="https://souox.com/ig" target="_blank"><img src="https://cdn.jsdelivr.net/gh/geanramos/18011975/img/instagram.png" width="32" height="auto" alt="Instagram" title="instagram" style="display: block; height: auto; border: 0;"></a></td>
-																			<td style="padding:0 2px 0 2px;"><a href="https://souox.com/zap" target="_blank"><img src="https://cdn.jsdelivr.net/gh/geanramos/18011975/img/whatsapp.png" width="32" height="auto" alt="WhatsApp" title="WhatsApp" style="display: block; height: auto; border: 0;"></a></td>
+																			<td style="padding:0 2px 0 2px;"><a href="https://souox.com/erlandio" target="_blank"><img src="https://cdn.jsdelivr.net/gh/geanramos/18011975/img/whatsapp.png" width="32" height="auto" alt="WhatsApp" title="WhatsApp" style="display: block; height: auto; border: 0;"></a></td>
 																			<td style="padding:0 2px 0 2px;"><a href="https://www.souox.com/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/geanramos/18011975/img/website.png" width="32" height="auto" alt="Web Site" title="Web Site" style="display: block; height: auto; border: 0;"></a></td>
 																		</tr>
 																	</table>
