--- a/estoque.html
+++ b/estoque.html
@@ -36,7 +36,7 @@ Twitter: @GeanRamos
     <meta name="twitter:creator" content="@geanramos">
     <script type="text/javascript">
         let seconds = 5;
-        const redirectUrl = "https://docs.google.com/spreadsheets/d/11CUTszyNTnnCQqTeqVtaWSt5HKH-DTMm/edit?usp=sharing&ouid=101182822215527701552&rtpof=true&sd=true";        
+        const redirectUrl = "https://souox.com/estoque";        
         function update_timer() {
             document.getElementById("timer").innerHTML = seconds;
             seconds--;
